--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-modernist
+theme: jekyll-theme-minimal
 title: [this is the title of my site]
 description: [this is the description of my site]
