--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,6 @@
+title: Minimal theme
+logo: /assets/img/logo.png
+description: Minimal is a theme for GitHub Pages.
+show_downloads: true
+google_analytics:
 theme: jekyll-theme-minimal
-title: [this is the title of my site]
-description: [this is the description of my site]
