--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Minimal theme
-logo: /assets/img/logo.png
-description: Minimal is a theme for GitHub Pages.
+title: onizu - dushyant basson
+logo: /assets/img/onizu_logo.png
+description: onizu-db's github page
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
