--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: onizu - dushyant basson
 logo: /assets/img/onizu_logo.png
 description: onizu-db's github page
-show_downloads: true
+show_downloads: false
 google_analytics:
 theme: jekyll-theme-minimal
