--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: onizu - dushyant basson
+title: onizu-db.github.io
 logo: /assets/img/onizu_logo.png
 description: onizu-db's github page
 show_downloads: false
