--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: onizu-db.github.io
+title: dushyant-basson
 logo: /assets/img/onizu_logo.png
-description: onizu - Dushyant Basson
+description: ONIZU - Dushyant Basson
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-minimal
