--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: dushyant-basson
+title: dushyant-basson.github.io
 logo: /assets/img/onizu_logo.png
 description: ONIZU - Dushyant Basson
 show_downloads: false
